objects/FSL__Optimization_Request__c.object
<CustomObject>
    <fields>
        <fullName>FSL__All_Tasks_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Services Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__AvgTravelTimeAfter__c</fullName>
        <label>Avg Travel Time After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__AvgTravelTimeBefore__c</fullName>
        <label>Avg Travel Time before</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__AvgTravelTimeWithoutHomeAfter__c</fullName>
        <label>Avg Travel Time Without Home After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__AvgTravelTimeWithoutHomeBefore__c</fullName>
        <label>Avg Travel Time Without Home Before</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Avg_Travel_After_Rso__c</fullName>
        <label>Avg Travel After Rso In Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Avg_Travel_Before_Rso__c</fullName>
        <label>Avg Travel Before Rso In Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__CandidatesIds_Json__c</fullName>
        <label>CandidatesIds Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Completed_With_Errors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed With Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Failure_Details__c</fullName>
        <label>Failure Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Failure_Reason__c</fullName>
        <label>Failure Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Click Authorize</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Already Running</fullName>
                </value>
                <value>
                    <fullName>No Availability Rule</fullName>
                </value>
                <value>
                    <fullName>Corrupted data</fullName>
                </value>
                <value>
                    <fullName>User Aborted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Filter_By_Boolean__c</fullName>
        <externalId>true</externalId>
        <label>Filter By Boolean</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Finish__c</fullName>
        <label>Finish</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSL__Include_Services_With_Empty_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Services With Empty Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Objects_Scheduled__c</fullName>
        <label>Objects Scheduled</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Objects_To_Schedule__c</fullName>
        <label>Objects To Schedule</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Optimization_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Optimization Data</label>
        <referenceTo>FSL__Optimization_Data__c</referenceTo>
        <relationshipLabel>Optimization Requests</relationshipLabel>
        <relationshipName>Optimization_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Optimization_Request_Queue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Optimization Request Queue</label>
        <referenceTo>FSL__Optimization_Request_Queue__c</referenceTo>
        <relationshipLabel>Optimization Request Queue</relationshipLabel>
        <relationshipName>Optimization_Request_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Originating_Resource_Absence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originating Resource Absence</label>
        <referenceTo>ResourceAbsence</referenceTo>
        <relationshipLabel>Optimization Requests</relationshipLabel>
        <relationshipName>Optimization_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Originating_Service_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originating Service Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Optimization Requests (Originating_Service Appointment)</relationshipLabel>
        <relationshipName>Optimization_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Request_Progress_Start__c</fullName>
        <label>Request Progress Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSL__Result_Json__c</fullName>
        <label>Result Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Result__c</fullName>
        <label>Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Policy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduling Policy</label>
        <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
        <relationshipLabel>Optimization Requests</relationshipLabel>
        <relationshipName>Optimization_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Recipe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduling Recipe</label>
        <referenceTo>FSL__SchedulingRecipe__c</referenceTo>
        <relationshipLabel>Scheduling Recipe</relationshipLabel>
        <relationshipName>Scheduling_Recipe</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Optimization Requests</relationshipLabel>
        <relationshipName>Optimization_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Optimization Requests</relationshipLabel>
        <relationshipName>Optimization_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSL__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Completed First Optimization Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Text_Status__c</fullName>
        <externalId>true</externalId>
        <label>Text Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Time_Per_Service__c</fullName>
        <label>Time Per Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfCapacityBasedResources__c</fullName>
        <label>Number Of Capacity Based Resources</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfCrews__c</fullName>
        <label>Number Of Crews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfOptimizableServices__c</fullName>
        <label>Number Of Optimizable Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfResources__c</fullName>
        <label>Number Of Resources</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfScheduledServicesAfter__c</fullName>
        <label>Number Of Scheduled Services After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfScheduledServicesBefore__c</fullName>
        <label>Number Of Scheduled Services Before</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelTimeAfter__c</fullName>
        <label>Total Travel Time After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelTimeBefore__c</fullName>
        <label>Total Travel Time Before</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelTimeWithoutHomeAfter__c</fullName>
        <label>Total Travel Time Without Home After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelTimeWithoutHomeBefore__c</fullName>
        <label>Total Travel Time Without Home Before</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalWorkCapacity__c</fullName>
        <label>Total Work Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalWorkDurationScheduledAfter__c</fullName>
        <label>Total Work Duration Scheduled After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalWorkDurationScheduledBefore__c</fullName>
        <label>Total Work Duration Scheduled Before</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Total_Optimization_Time__c</fullName>
        <externalId>true</externalId>
        <label>Total Optimization Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global Optimization</fullName>
                    <default>true</default>
                    <label>Global Optimization</label>
                </value>
                <value>
                    <fullName>Fix Overlaps</fullName>
                </value>
                <value>
                    <fullName>SA Reshuffle</fullName>
                </value>
                <value>
                    <fullName>Fill-In Schedule</fullName>
                </value>
                <value>
                    <fullName>Group Nearby SAs</fullName>
                </value>
                <value>
                    <fullName>Resource Schedule Optimization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__UtilizationTotalAfter__c</fullName>
        <label>Utilization Total After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__UtilizationTotalBefore__c</fullName>
        <label>Utilization Total Before</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__UtilizationWrenchAfter__c</fullName>
        <label>Utilization Wrench After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__UtilizationWrenchBefore__c</fullName>
        <label>Utilization Wrench Before</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Optimization Request</label>
    <listViews>
        <fullName>FSL__All_Optimization_Requests</fullName>
        <columns>NAME</columns>
        <columns>FSL__Start__c</columns>
        <columns>FSL__Finish__c</columns>
        <columns>FSL__Status__c</columns>
        <columns>FSL__Objects_To_Schedule__c</columns>
        <columns>FSL__Objects_Scheduled__c</columns>
        <columns>FSL__Failure_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Optimization Requests</label>
    </listViews>
    <nameField>
        <displayFormat>OR-{YYYY}-{MM}-{0}</displayFormat>
        <label>Optimization Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Optimization Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>FSL__Related_Service_Territory_Member__c</fullName>
        <label>Related Service Territory Member</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>FSL__Related_Service_Territory__c</fullName>
        <label>Related Service Territory</label>
    </sharingReasons>
</CustomObject>